Updated the fxml resources, redesigned the game scene

--- a/src/main/resources/fxml/game.fxml
+++ b/src/main/resources/fxml/game.fxml
@@ -42,7 +42,106 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="0" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.rowIndex="0" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" GridPane.rowIndex="0" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" GridPane.rowIndex="0" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6" GridPane.rowIndex="0" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="7" GridPane.rowIndex="0" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="8" GridPane.rowIndex="0" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="9" GridPane.rowIndex="0" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" GridPane.rowIndex="1" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6" GridPane.rowIndex="1" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="7" GridPane.rowIndex="1" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="8" GridPane.rowIndex="1" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="9" GridPane.rowIndex="1" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" GridPane.rowIndex="2" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" GridPane.rowIndex="2" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6" GridPane.rowIndex="2" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="7" GridPane.rowIndex="2" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="8" GridPane.rowIndex="2" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="9" GridPane.rowIndex="2" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" GridPane.rowIndex="3" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" GridPane.rowIndex="3" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6" GridPane.rowIndex="3" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="7" GridPane.rowIndex="3" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="8" GridPane.rowIndex="3" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="9" GridPane.rowIndex="3" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" GridPane.rowIndex="4" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" GridPane.rowIndex="4" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6" GridPane.rowIndex="4" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="7" GridPane.rowIndex="4" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="8" GridPane.rowIndex="4" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="9" GridPane.rowIndex="4" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="0" GridPane.rowIndex="5" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.rowIndex="5" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" GridPane.rowIndex="5" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" GridPane.rowIndex="5" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6" GridPane.rowIndex="5" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="7" GridPane.rowIndex="5" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="8" GridPane.rowIndex="5" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="9" GridPane.rowIndex="5" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="0" GridPane.rowIndex="6" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.rowIndex="6" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" GridPane.rowIndex="6" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" GridPane.rowIndex="6" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6" GridPane.rowIndex="6" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="7" GridPane.rowIndex="6" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="8" GridPane.rowIndex="6" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="9" GridPane.rowIndex="6" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="0" GridPane.rowIndex="7" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="7" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.rowIndex="7" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" GridPane.rowIndex="7" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" GridPane.rowIndex="7" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6" GridPane.rowIndex="7" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="7" GridPane.rowIndex="7" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="8" GridPane.rowIndex="7" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="9" GridPane.rowIndex="7" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="0" GridPane.rowIndex="8" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="8" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.rowIndex="8" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" GridPane.rowIndex="8" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" GridPane.rowIndex="8" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6" GridPane.rowIndex="8" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="7" GridPane.rowIndex="8" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="8" GridPane.rowIndex="8" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="9" GridPane.rowIndex="8" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="0" GridPane.rowIndex="9" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="9" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.rowIndex="9" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" GridPane.rowIndex="9" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" GridPane.rowIndex="9" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6" GridPane.rowIndex="9" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="7" GridPane.rowIndex="9" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="8" GridPane.rowIndex="9" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#squareClick" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="9" GridPane.rowIndex="9" />
          </children>
       </GridPane>
       <Button fx:id="doneButton" layoutX="334.0" layoutY="623.0" mnemonicParsing="false" onAction="#finishGame" prefHeight="52.0" prefWidth="83.0" text="Give up" />
